--- a/src/app/auth/start/start.component.sass
+++ b/src/app/auth/start/start.component.sass
@@ -5,7 +5,7 @@
   height: 100vh
   align-items: center
 .image
-  background-image: url('../assets/Asset2.svg')
+  background-image: url('../../../assets/Asset2.svg')
   width: 325px
   height: 520px
   margin: auto
@@ -13,3 +13,4 @@
   flex: 1
 .start__page_content
   flex: 1
+
