--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,10 @@
-<router-outlet></router-outlet>
+<div class="start__page">
+    <div class="start__page_image">
+      <div class="image">
+      </div>
+    </div>
+    <div class="start__page_content">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 
