--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,14 +1,25 @@
-<div class="sign">
-  <div class="sign__image">
+<div class="signIn">
+    <h1>Sign In</h1>
+    <div class="form-container">
+      <div class="form-item">
+        <mat-form-field>
+          <input matInput placeholder="Email">
+        </mat-form-field>
+      </div>
+      <a routerLink="/restore-password" class="forgot-password">Forgot password?</a>
+      <div class="form-item">
+        <mat-form-field>
+          <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
+          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+          <mat-icon>{{hide ? "visibility_off" : "visibility"}}</mat-icon>
+          </button>
+        </mat-form-field>
+      </div>
+      <div>
+        <button class="signInButton" mat-raised-button color="primary">Sign In</button>
+      </div>
+      <div>
+        <p>I don't have account <a routerLink="/signup">Sign Up</a></p>
+      </div>
+    </div>
   </div>
-  <div class="sign__form_container">
-    <h1 class="sign__form_name">Sign In</h1>
-    <form class="sign__form">
-       <input type="text" placeholder="Full Name" class="sign__form_input">
-        <a routerLink="/restore-password" class="sign__form_forgot-password">Forgot password?</a>
-        <input type="password" placeholder="Password" class="sign__form_input">
-        <button class='sign__form_button' type="submit" routerLink="/">Sign In</button>
-      </form>
-    <p class="sign__form_sign-in">I don’t have account <a routerLink="/signup">Sign Up</a></p>
-  </div>
-</div>
