--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,3 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons')
+@import "~@angular/material/prebuilt-themes/indigo-pink.css"
