add completed start pages

--- a/src/app/auth/link-expired/link-expired.component.html
+++ b/src/app/auth/link-expired/link-expired.component.html
@@ -1,1 +1,13 @@
-<p>link-expired works!</p>
+<div class="linkExpired">
+  <h1>Link expired</h1>
+  <div class="form-container">
+    <div class="form-item">
+      <mat-form-field>
+        <input matInput placeholder="Email to restore password">
+      </mat-form-field>
+    </div>
+    <div>
+      <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
+    </div>
+  </div>
+</div>
