--- a/src/app/auth/login/login.component.sass
+++ b/src/app/auth/login/login.component.sass
@@ -23,9 +23,12 @@ mat-form-field
   width: 400px
 .signInButton
   background-color: #109CF1
+  font-size: 18px
+  margin-top: 20px
 .forgot-password
   font-size: 12px
   margin-left: 300px
+
 
 
 
