--- a/src/app/auth/restore-password/restore-password.component.html
+++ b/src/app/auth/restore-password/restore-password.component.html
@@ -1,15 +1,14 @@
-<div class="sign">
-  <div class="sign__image">
-  </div>
-  <div class="sign__form_container">
-    <h1 class="sign__form_name">Restore your<br>password</h1>
-    <form class="sign__form">
-      <input type="password" placeholder="Email" class="sign__form_input">
-      <div>
-        <button class='sign__form_button' type="submit">Restore your password</button>
-        <a href="" class="sign__form_button_cancel">Cancel</a>
-      </div>
-    </form>
+<div class="restorePassword">
+  <h1>Restore your <br> password</h1>
+  <div class="form-container">
+    <div class="form-item">
+      <mat-form-field>
+        <input matInput placeholder="Email">
+      </mat-form-field>
+    </div>
+    <div>
+      <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
+      <a routerLink="/signup">Cancel</a>
+    </div>
   </div>
 </div>
-
