--- a/src/app/auth/set-new-password/set-new-password.component.html
+++ b/src/app/auth/set-new-password/set-new-password.component.html
@@ -1,13 +1,13 @@
-<div class="sign">
-  <div class="sign__image">
-  </div>
-  <div class="sign__form_container">
-    <h1 class="sign__form_name">Set new <br>password</h1>
-    <form class="sign__form">
-      <input type="password" placeholder="Set new password" class="sign__form_input">
-      <div>
-        <button class='sign__form_button' type="submit" routerLink="/signin">Set new password</button>
-      </div>
-    </form>
+<div class="setNewPassword">
+  <h1>Set new <br> password</h1>
+  <div class="form-container">
+    <div class="form-item">
+      <mat-form-field>
+        <input matInput placeholder="New password">
+      </mat-form-field>
+    </div>
+    <div>
+      <button class="setNewPasswordButton" mat-raised-button color="primary">Set new password</button>
+    </div>
   </div>
 </div>
