--- a/src/app/auth/set-new-password/set-new-password.component.sass
+++ b/src/app/auth/set-new-password/set-new-password.component.sass
@@ -1,49 +1,21 @@
-button
-  outline: none
-  border: none
-.sign
-  display: flex
-  color: #8C8C8C
-  margin-left: 217px
-  margin-top: 100px
-.sign__image
-  background-image: url('../../../assets/Asset2.svg')
-  width: 325px
-  height: 520px
-.sign__form
-  display: flex
-  flex-direction: column
-  margin-top: 50px
-.sign__form_input
-  border: none
-  border-bottom: 1px solid #8C8C8C
-  outline: none
-  margin-bottom: 40px
-  width: 404px
-  font-size: 16px
-.sign__form_button
-  width: 203px
-  height: 33px
-  box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24)
-  background: #109CF1
-  color: #ffffff
-  border-radius: 4px
-  font-size: 16px
-.sign__form_button:hover
-  background: #110CF5
-.sign__form_name
-  color: #000000
+.setNewPassword
+  font-family: 'Arial'
+  margin-left: 5em
+  margin-top: -4em
+h1
   font-size: 48px
   color: #323C47
-.sign__form_sign-in
-  color: #323C47
-  a
-    color: #109CF1
-.sign__form_container
-  margin-left: 307px
-.alert-danger
-  color: red
-input.ng-touched.ng-invalid
-  border-bottom: 1px solid red
-input.ng-touched.ng-valid
-  border-bottom: 1px solid #33CC00
+  font-weight: bold
+.form-container
+  display: flex
+  flex-direction: column
+  width: 100%
+.form-item
+  flex: 1
+mat-form-field
+  width: 400px
+.setNewPasswordButton
+  background-color: #109CF1
+  margin-top: 20px
+  font-size: 18px
+
