add form's validators

--- a/src/app/auth/restore-password/restore-password.component.html
+++ b/src/app/auth/restore-password/restore-password.component.html
@@ -1,14 +1,18 @@
 <div class="restorePassword">
   <h1>Restore your <br> password</h1>
   <div class="form-container">
-    <div class="form-item">
-      <mat-form-field>
-        <input matInput placeholder="Email">
-      </mat-form-field>
-    </div>
-    <div>
-      <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
-      <a routerLink="/signup">Cancel</a>
-    </div>
+    <form>
+      <div class="form-item">
+        <mat-form-field>
+          <input matInput type="email" id="email" name="email" placeholder="Email" ngModel email required #emailInput="ngModel">
+          <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
+          <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
+        </mat-form-field>
+      </div>
+      <div>
+        <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
+        <a routerLink="/signup">Cancel</a>
+      </div>
+    </form>
   </div>
 </div>
