--- a/src/app/auth/link-expired/link-expired.component.html
+++ b/src/app/auth/link-expired/link-expired.component.html
@@ -1,13 +1,17 @@
 <div class="linkExpired">
   <h1>Link expired</h1>
   <div class="form-container">
-    <div class="form-item">
-      <mat-form-field>
-        <input matInput placeholder="Email to restore password">
-      </mat-form-field>
-    </div>
-    <div>
-      <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
-    </div>
+    <form>
+      <div class="form-item">
+        <mat-form-field>
+          <input matInput type="email" id="email" name="email" placeholder="Email to restore password" ngModel email required #emailInput="ngModel">
+          <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
+          <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
+        </mat-form-field>
+      </div>
+      <div>
+        <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
+      </div>
+    </form>
   </div>
 </div>
