--- a/src/app/auth/restore-password/restore-password.component.html
+++ b/src/app/auth/restore-password/restore-password.component.html
@@ -1,18 +1,26 @@
-<div class="restorePassword">
-  <h1>Restore your <br> password</h1>
-  <div class="form-container">
-    <form>
-      <div class="form-item">
-        <mat-form-field>
-          <input matInput type="email" id="email" name="email" placeholder="Email" ngModel email required #emailInput="ngModel">
-          <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
-          <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
-        </mat-form-field>
+<div class="restorePassword__page">
+    <div class="restorePassword__page_image">
+      <div class="image">
       </div>
-      <div>
-        <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
-        <a routerLink="/signup">Cancel</a>
+    </div>
+    <div class="restorePassword__page_content">
+      <div class="restorePassword">
+        <h1>Restore your <br> password</h1>
+        <div class="form-container">
+          <form>
+            <div class="form-item">
+              <mat-form-field>
+                <input matInput type="email" id="email" name="email" placeholder="Email" ngModel email required #emailInput="ngModel">
+                <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty</mat-error>
+                <mat-error *ngIf="!emailInput.hasError('required')">Email is invalid</mat-error>
+              </mat-form-field>
+            </div>
+            <div>
+              <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
+              <a routerLink="/signup">Cancel</a>
+            </div>
+          </form>
+        </div>
       </div>
-    </form>
+    </div>
   </div>
-</div>
