--- a/src/app/auth/link-expired/link-expired.component.sass
+++ b/src/app/auth/link-expired/link-expired.component.sass
@@ -1,3 +1,18 @@
+.linkExpired__page
+  display: flex
+  flex-flow: row nowrap
+  color: #8C8C8C
+  height: 100vh
+  align-items: center
+.image
+  background-image: url('/assets/Asset2.svg')
+  width: 325px
+  height: 520px
+  margin: auto
+.linkExpired__page_image
+  flex: 1
+.linkExpired__page_content
+  flex: 1
 .linkExpired
   font-family: 'Arial'
   margin-left: 5em
