--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,7 +7,7 @@
       <div class="signIn">
         <h1>Sign In</h1>
         <div class="form-container">
-          <form>
+          <form (ngSubmit)="onSubmit(form)" #form="ngForm">
             <div class="form-item">
               <mat-form-field>
                 <input matInput type="email" id="email" name="email" placeholder="Email" ngModel email required #emailInput="ngModel">
@@ -26,7 +26,7 @@
               </mat-form-field>
             </div>
             <div>
-              <button class="signInButton" mat-raised-button color="primary">Sign In</button>
+              <button type="submit" class="signInButton" mat-raised-button color="primary" [disabled]="form.invalid">Sign In</button>
             </div>
             <div>
               <p>I don't have account <a routerLink="/signup">Sign Up</a></p>
