add password restore

--- a/src/app/auth/restore-password/restore-password.component.html
+++ b/src/app/auth/restore-password/restore-password.component.html
@@ -7,7 +7,7 @@
       <div class="restorePassword">
         <h1>Restore your <br> password</h1>
         <div class="form-container">
-          <form>
+          <form (ngSubmit)="onSubmit(form)" #form="ngForm">
             <div class="form-item">
               <mat-form-field>
                 <input matInput type="email" id="email" name="email" placeholder="Email" ngModel email required #emailInput="ngModel">
@@ -16,7 +16,7 @@
               </mat-form-field>
             </div>
             <div>
-              <button class="restorePasswordButton" mat-raised-button color="primary">Restore password</button>
+              <button class="restorePasswordButton" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Restore password</button>
               <a routerLink="/signup">Cancel</a>
             </div>
           </form>
