--- a/src/app/auth/set-new-password/set-new-password.component.html
+++ b/src/app/auth/set-new-password/set-new-password.component.html
@@ -7,18 +7,18 @@
       <div class="setNewPassword">
         <h1>Set new <br> password</h1>
         <div class="form-container">
-          <form>
+          <form (ngSubmit)="onSubmit(form)" #form="ngForm">
             <div class="form-item">
               <mat-form-field hintLabel="Should be at least 6 characters long">
                 <input matInput type="password" id="password" name="password" placeholder="New password" ngModel #pwInput="ngModel" required minlength="6" [type]="hide ? 'password' : 'text'">
                 <mat-hint align="end">{{ pwInput.value?.length }}/6</mat-hint>
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                   <mat-icon>{{hide ? "visibility_off" : "visibility"}}</mat-icon>
-                </button>
+                </a>
               </mat-form-field>
             </div>
             <div>
-              <button class="setNewPasswordButton" mat-raised-button color="primary">Set new password</button>
+              <button class="setNewPasswordButton" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Set new password</button>
             </div>
           </form>
         </div>
