--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700|Material+Icons')
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap')
 @import "~@angular/material/prebuilt-themes/indigo-pink.css"
