fix: change router for compani-settins

--- a/src/app/company-settings/company-settings.component.sass
+++ b/src/app/company-settings/company-settings.component.sass
@@ -1,4 +1,5 @@
 .company-container
+  margin: auto
   width: 100%
   height: auto
   display: flex
@@ -16,7 +17,7 @@
     display: flex
 
 .company-card
-  width: 78.57%
+  // width: 78.57%
   height: 28.63%
 
 mat-card-title
@@ -30,13 +31,13 @@ mat-card-title
 
 
 .approval-card
-  width: 78.57%
+  // width: 78.57%
   height: 15.5%
 
 .comments-card
-  width: 28.6%
+  // width: 28.6%
   height: 20.12%
 
 .integration-card
-  width: 49.4%
+  // width: 49.4%
   height: 20.12%
