--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,6 +2,6 @@
   <div class="menu-icons-links">
     <!-- <a href="#"><i class="material-icons">help_outline</i></a> -->
     <a href="#"><i class="material-icons">notifications</i></a>
-    <a routerLink="/sign-in"><i class="material-icons">input</i></a>
+    <a routerLink="/login"><i class="material-icons">input</i></a>
   </div>
 </mat-toolbar>
