fix: add routing for auth"

--- a/src/app/core/header/header.component.sass
+++ b/src/app/core/header/header.component.sass
@@ -1,9 +1,10 @@
 mat-toolbar
-  height: 60px
-  background: #FFFFFF
-  border-bottom: 1px solid #EBEFF2
   display: flex
   justify-content: flex-end
+  height: 60px
+  margin-bottom: 10px
+  background: #FFFFFF
+  border-bottom: 1px solid #EBEFF2
 
   .menu-icons-links
     i
