--- a/src/app/company-settings/company-settings.component.sass
+++ b/src/app/company-settings/company-settings.component.sass
@@ -16,7 +16,7 @@
     display: flex
 
 .company-card
-  width: 78.57%
+  // width: 78.57%
   height: 28.63%
 
 mat-card-title
@@ -30,13 +30,13 @@ mat-card-title
 
 
 .approval-card
-  width: 78.57%
+  // width: 78.57%
   height: 15.5%
 
 .comments-card
-  width: 28.6%
+  // width: 28.6%
   height: 20.12%
 
 .integration-card
-  width: 49.4%
+  // width: 49.4%
   height: 20.12%
