--- a/src/app/core/header/header.component.sass
+++ b/src/app/core/header/header.component.sass
@@ -1,4 +1,7 @@
 mat-toolbar
+  display: flex
+  justify-content: flex-end
+  margin-bottom: 15px
   height: 60px
   background: #FFFFFF
   border-bottom: 1px solid #EBEFF2
