style: add pading in main menu

--- a/src/app/core/menu/menu.component.sass
+++ b/src/app/core/menu/menu.component.sass
@@ -1,5 +1,5 @@
 .menu-link
-  padding: 10px
+  padding: 10px 20px
 
   i
     font-size: 17px
@@ -15,17 +15,17 @@
     letter-spacing: 0.01em
     color: #334D6E
     text-decoration: none
-  &:active
-    color: #109CF1
-    i
-      color: #109CF1
 
-span:hover
+a:active
   color: #109CF1
+  i, span
+    color: #109CF1
+
+a:hover
+  color: #109CF1
+  i, span
+    color: #109CF1
 
 .company-link
   border-bottom: 1px solid #EBEFF2
-  padding: 20px 10px
-
-// .material-icons
-//   font-family: 'Material Icons Fill'
+  padding: 20px 20px
