--- a/src/app/core/menu/menu.component.html
+++ b/src/app/core/menu/menu.component.html
@@ -1,30 +1,30 @@
 <div class="menu-link company-link">
   <a routerLink="/company-settings">
-    <i class="material-icons">business</i>
+    <i class="material-icons-round">business</i>
     <span>Company settings</span>
   </a>
 </div>
 <div class="menu-link">
   <a routerLink="/profile">
-    <i class="material-icons">perm_identity</i>
+    <i class="material-icons-round">perm_identity</i>
     <span>Profile</span>
   </a>
 </div>
 <div class="menu-link">
   <a routerLink="/projects">
-    <i class="material-icons">work_outline</i>
+    <i class="material-icons-round">work_outline</i>
     <span>Projects</span>
   </a>
 </div>
 <div class="menu-link">
   <a routerLink="/employees">
-    <i class="material-icons">supervisor_account</i>
+    <i class="material-icons-round">supervisor_account</i>
     <span>Employees</span>
   </a>
 </div>
 <div class="menu-link">
   <a routerLink="/timelog-day">
-    <i class="material-icons">schedule</i>
+    <i class="material-icons-round">schedule</i>
     <span>Time Logs</span>
   </a>
 </div>
