--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -25,13 +25,13 @@
               <mat-form-field hintLabel="Should be at least 6 characters long">
                 <input matInput type="password" id="password" name="password" placeholder="Password" ngModel #pwInput="ngModel" required minlength="6" [type]="hide ? 'password' : 'text'">
                 <mat-hint align="end">{{ pwInput.value?.length }}/6</mat-hint>
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                   <mat-icon>{{hide ? "visibility_off" : "visibility"}}</mat-icon>
-                </button>
+                </a>
               </mat-form-field>
             </div>
             <div>
-              <button class="signUpButton" mat-raised-button color="primary" type="submit">Sign Up</button>
+              <button class="signUpButton" mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Sign Up</button>
             </div>
             <div>
               <p>Already have an account? <a routerLink="/login">Sign In</a></p>
