--- a/src/app/timelogs/header-timelogs/header-timelogs.component.sass
+++ b/src/app/timelogs/header-timelogs/header-timelogs.component.sass
@@ -1,35 +1,65 @@
 .employees-header
-  width: 664px
+  width: 744px
   display: flex
-  color: #6A707E
-  margin: 10px
-  button
-    cursor: pointer
-    font-family: 'Poppins', sans-serif
-    font-style: normal
-    font-weight: 500
-    font-size: 11px
-    line-height: normal
-    text-align: center
-    color: #6A707E
+  justify-content: space-between
+  align-items: center
+  border: 1px solid rebeccapurple
+
+  .toggle
+    display: flex
+    align-items: center
+    border-radius: 5px
     border: 1px solid #109CF1
-    border-radius: 1px
-    padding: 3px 20px
-    background: none
-  button:hover
-    color: #ffffff
-    background: #109CF1
-  .buttons
-    margin-right: auto
-    margin-left: 150px
+    box-sizing: border-box
+
+    button
+      font-family: Poppins
+      font-style: normal
+      font-weight: 500
+      font-size: 11px
+      line-height: 16px
+      text-align: center
+      letter-spacing: 0.02em
+
+    button:first-child
+      color: white
+      background-color: #109CF1
+      border: none
+      border-radius: 4px
+      padding: 3px 22px
+
+    button:last-child
+      padding: 3px 20px
+      margin: 0 auto
+      color: #109CF1
+      background-color: transparent
+      border: none
+      text-align: center
+
   .data
     display: flex
+
     .material-icons
       margin-top: 2px
       font-size: 13px
+
     p
       padding: 0 10px
       margin: 0 5px
       font-size: 15px
-.button_save_time
-  width: 130px
+
+.button-save
+  font-family: Poppins
+  font-style: normal
+  font-weight: 500
+  font-size: 13px
+  line-height: 19px
+  text-align: center
+  letter-spacing: 0.01em
+  color: white
+  background: #109CF1
+  box-shadow: 0px 4px 10px rgba(16, 156, 241, 0.24)
+  border-radius: 4px
+  border: 1px solid #109CF1
+  box-sizing: border-box
+  padding: 1px 15px
