feat: add profile page

--- a/src/app/company-settings/company-properties/company-properties.component.html
+++ b/src/app/company-settings/company-properties/company-properties.component.html
@@ -42,7 +42,7 @@
         <mat-radio-button
           class="example-radio-button"
           *ngFor="let day of startWeekDay[0]"
-          [value]="day"
+          [(value)]="day"
         >
           {{ day }}
         </mat-radio-button>
