feat: remove data from child to parent

--- a/src/app/company-settings/company-properties/company-properties.component.html
+++ b/src/app/company-settings/company-properties/company-properties.component.html
@@ -1,7 +1,7 @@
 <div class="company-properties">
   <div class="company-properties__header">
     <mat-form-field class="company-width">
-      <input matInput value="{{ name }}" />
+      <input matInput value="{{ _company.name }}" />
     </mat-form-field>
     <button mat-raised-button class="save-button" color="primary" type="submit">
       Save
@@ -11,7 +11,7 @@
   <div class="company-properties__body">
     <div class="company-properties__box">
       <p>Activities:</p>
-      <div *ngFor="let item of activities">
+      <div *ngFor="let item of _company.activities">
         <mat-checkbox [(ngModel)]="item.checked" (change)="onToggle()">{{
           item.label
         }}</mat-checkbox>
@@ -24,7 +24,7 @@
         <mat-label>Choose project</mat-label>
         <mat-select [(ngModel)]="selectedValue" name="project">
           <mat-option
-            *ngFor="let item of defaultProjects"
+            *ngFor="let item of _company.defaultProjects"
             [value]="item.checked"
           >
             {{ item.project }}
@@ -53,11 +53,11 @@
       <p>Default Workload:</p>
       <form class="workload-form">
         <mat-form-field class="workload-width">
-          <input type="number" matInput [(value)]="workload[0]" />
+          <input type="number" matInput [(value)]="_company.workload[0]" />
         </mat-form-field>
         <p>hours per</p>
         <mat-form-field class="time-measure-width">
-          <mat-select [(value)]="workload[1]">
+          <mat-select [(value)]="_company.workload[1]">
             <mat-option value="week">week</mat-option>
             <mat-option value="day">day</mat-option>
           </mat-select>
