--- a/src/app/company-settings/company-settings.component.html
+++ b/src/app/company-settings/company-settings.component.html
@@ -1,6 +1,6 @@
 <div class="company-container">
   <app-container class="company-card">
-    <app-company-properties></app-company-properties>
+    <app-company-properties [company]="Company"></app-company-properties>
   </app-container>
 
   <app-container class="approval-card">
