--- a/src/app/auth/login/login.component.sass
+++ b/src/app/auth/login/login.component.sass
@@ -14,9 +14,20 @@
 .login__page_content
   flex: 1
 .signIn
-  font-family: 'Arial'
+  font-family: Poppins
   margin-left: 5em
   margin-top: -4em
+  .sign__button_google
+    width: 400px
+    height: 70px
+    margin-bottom: 30px
+    margin-top: 25px
+    img
+      display: inline
+      padding-right: 20px
+    p
+      display: inline
+      font-size: 18px
 mat-icon
   color: #8C8C8C
 h1
