--- a/src/app/auth/set-new-password/set-new-password.component.sass
+++ b/src/app/auth/set-new-password/set-new-password.component.sass
@@ -14,7 +14,7 @@
 .setNewPassword__page_content
   flex: 1
 .setNewPassword
-  font-family: 'Arial'
+  font-family: Poppins
   margin-left: 5em
   margin-top: -4em
 h1
