--- a/src/app/auth/signup/signup.component.sass
+++ b/src/app/auth/signup/signup.component.sass
@@ -14,8 +14,19 @@
 .signUp__page_content
   flex: 1
 .signUp
-  font-family: 'Arial'
+  font-family: Poppins
   margin-left: 5em
+  .sign__button_google
+    width: 400px
+    height: 70px
+    margin-bottom: 25px
+    margin-top: 25px
+    img
+      display: inline
+      padding-right: 20px
+    p
+      display: inline
+      font-size: 18px
 mat-icon
   color: #8C8C8C
 h1
