--- a/src/app/auth/restore-password/restore-password.component.sass
+++ b/src/app/auth/restore-password/restore-password.component.sass
@@ -14,7 +14,7 @@
 .restorePassword__page_content
   flex: 1
 .restorePassword
-  font-family: 'Arial'
+  font-family: Poppins
   margin-left: 5em
   margin-top: -4em
 mat-icon
