feat: add snackbar

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -3,3 +3,18 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600&display=swap')
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap')
 @import "~@angular/material/prebuilt-themes/indigo-pink.css"
+
+/* Styles for snackbar */
+.error
+  background-color: #db3b4b
+  color: white
+  opacity: .8
+  button
+    color: white
+
+.success
+  background-color: #40b0f5
+  color: white
+  opacity: .8
+  button
+    color: white
