create and add datepicker

--- a/src/app/timelogs/header-timelogs/header-timelogs.component.sass
+++ b/src/app/timelogs/header-timelogs/header-timelogs.component.sass
@@ -37,16 +37,10 @@
       text-align: center
 
   .data
+    width: 105px
+    height: 25px
     display: flex
-
-    .material-icons
-      margin-top: 2px
-      font-size: 13px
-
-    p
-      padding: 0 10px
-      margin: 0 5px
-      font-size: 15px
+    align-items: center
 
 .button-save
   font-family: Poppins
