--- a/src/app/timelogs/header-timelogs/header-timelogs.component.html
+++ b/src/app/timelogs/header-timelogs/header-timelogs.component.html
@@ -1,12 +1,16 @@
 <div class="employees-header">
   <div class="data">
-<!--    <i class="material-icons">chevron_left</i>-->
-    <mat-form-field>
-      <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-<!--    <i class="material-icons">chevron_right</i>-->
+  <app-datepicker></app-datepicker>
+<!--    <button mat-icon-button (click)="decrementDate()" matTooltip="Previous day">-->
+<!--      <mat-icon>keyboard_arrow_left</mat-icon>-->
+<!--    </button>-->
+<!--      <input  [matDatepicker]="picker" (click)="picker.open()"-->
+<!--             placeholder="Choose a date" [formControl]="date" readonly>-->
+<!--      <mat-datepicker #picker startView="year" ></mat-datepicker>-->
+<!--    <button mat-icon-button (click)="incrementDate()" matTooltip="Next day">-->
+<!--      <mat-icon>keyboard_arrow_right</mat-icon>-->
+<!--    </button>-->
+
   </div>
   <div class="toggle">
     <button routerLink="/timelog-day">Day</button>
