ref: unite table and header in html

--- a/src/app/timelogs/timelog/timelog.component.html
+++ b/src/app/timelogs/timelog/timelog.component.html
@@ -1,9 +1,6 @@
-<div>
-  <app-header-timelogs>
-  </app-header-timelogs>
-
+<div class="container">
+  <app-header-timelogs></app-header-timelogs>
   <div class="table">
-
     <table mat-table [dataSource]="dataSource">
 
       <ng-container matColumnDef="project">
