--- a/src/app/timelogs/timelog/timelog.component.css
+++ b/src/app/timelogs/timelog/timelog.component.css
@@ -1,7 +1,12 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .table {
   width: 744px;
   padding: 20px;
-  border: 1px solid rebeccapurple;
 }
 .table table {
   width: 100%;
