--- a/src/app/timelogs/timelog/timelog.component.sass
+++ b/src/app/timelogs/timelog/timelog.component.sass
@@ -1,7 +1,11 @@
+.container
+  display: flex
+  flex-direction: column
+  align-items: center
+
 .table
   width: 744px
   padding: 20px
-  border: 1px solid rebeccapurple
 
   table
     width: 100%
