--- a/src/app/timelogs/timelog-select/timelog-select.component.css
+++ b/src/app/timelogs/timelog-select/timelog-select.component.css
@@ -1,9 +1,9 @@
-.mark mat-icon {
+.project mat-icon {
   position: absolute;
   bottom: -3px;
   font-size: 24px;
 }
-.mark span {
+.project span {
   margin-left: 28px;
 }
 
