--- a/src/app/timelogs/timelog-select/timelog-select.component.html
+++ b/src/app/timelogs/timelog-select/timelog-select.component.html
@@ -2,14 +2,14 @@
   <mat-label>
     <div class="round"></div>&nbsp;&nbsp;<span>Choose Project</span>
   </mat-label>
-  <mat-select [(value)]="mark">
-    <mat-select-trigger *ngIf="mark" class="mark">
-      <mat-icon class="mat-24" [ngStyle]="{'color': mark.color}">brightness_1</mat-icon>
-      <span>{{mark.name}}</span>
+  <mat-select [(value)]="project">
+    <mat-select-trigger *ngIf="project" class="project">
+      <mat-icon class="mat-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
+      <span>{{project.name}}</span>
     </mat-select-trigger>
-    <mat-option *ngFor="let mark of marks" [value]="mark">
-      <mat-icon class="mat-24" [ngStyle]="{'color': mark.color}">brightness_1</mat-icon>
-      <span>{{mark.name}}</span>
+    <mat-option *ngFor="let project of projects" [value]="project">
+      <mat-icon class="mat-24" [ngStyle]="{'color': project.color}">brightness_1</mat-icon>
+      <span>{{project.name}}</span>
     </mat-option>
   </mat-select>
 </mat-form-field>
